--- a/.github/actions/upload-blob-report/action.yml
+++ b/.github/actions/upload-blob-report/action.yml
@@ -4,29 +4,27 @@ inputs:
   report_dir:
     description: 'Directory containing blob report'
     required: true
-    type: string
     default: 'test-results/blob-report'
   job_name:
     description: 'Unique job name'
     required: true
-    type: string
     default: ''
 runs:
   using: "composite"
   steps:
     - name: Upload blob report to GitHub
-      if: always() && github.event_name == 'pull_request'
+      if: ${{ !cancelled() && github.event_name == 'pull_request' }}
       uses: actions/upload-artifact@v4
       with:
         name: blob-report-${{ inputs.job_name }}
         path: ${{ inputs.report_dir }}/**
         retention-days: 7
     - name: Write triggering pull request number in a file
-      if: always() && github.event_name == 'pull_request'
+      if: ${{ !cancelled() && github.event_name == 'pull_request' }}
       shell: bash
       run: echo '${{ github.event.number }}' > pull_request_number.txt;
     - name: Upload artifact with the pull request number
-      if: always() && github.event_name == 'pull_request'
+      if: ${{ !cancelled() && github.event_name == 'pull_request' }}
       uses: actions/upload-artifact@v4
       with:
         name: pull-request-${{ inputs.job_name }}
