--- a/.github/actions/upload-blob-report/action.yml
+++ b/.github/actions/upload-blob-report/action.yml
@@ -14,10 +14,7 @@ runs:
   steps:
     - name: Integrity check
       shell: bash
-      run: |
-        for file in ${{ inputs.report_dir }}/*.zip; do
-          unzip -t $file
-        done
+      run: find "${{ inputs.report_dir }}" -name "*.zip" -exec unzip -t {} \;
     - name: Upload blob report to GitHub
       if: ${{ !cancelled() && github.event_name == 'pull_request' }}
       uses: actions/upload-artifact@v4
