--- a/.github/workflows/create_test_report.yml
+++ b/.github/workflows/create_test_report.yml
@@ -18,12 +18,12 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
-    - name: "Azure OIDC Login"
-      uses: azure/login@v1
+    - name: Azure Login
+      uses: azure/login@v2
       with:
-        client-id: ${{ vars.CFS_CLIENT_ID }}
-        tenant-id: ${{ vars.CFS_TENANT_ID }}
-        subscription-id: ${{ vars.CFS_SUBSCRIPTION_ID }}
+        client-id: ${{ secrets.AZURE_BLOB_REPORTS_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_BLOB_REPORTS_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_BLOB_REPORTS_SUBSCRIPTION_ID }}
     - run: npm ci
       env:
         DEBUG: pw:install
