--- a/.github/workflows/tests_video.yml
+++ b/.github/workflows/tests_video.yml
@@ -9,7 +9,6 @@ on:
 env:
   # Force terminal colors. @see https://www.npmjs.com/package/colors
   FORCE_COLOR: 1
-  FLAKINESS_CONNECTION_STRING: ${{ secrets.FLAKINESS_CONNECTION_STRING }}
   ELECTRON_SKIP_BINARY_DOWNLOAD: 1
 
 jobs:
@@ -20,9 +19,19 @@ jobs:
       matrix:
         browser: [chromium, firefox, webkit]
         os: [ubuntu-20.04, ubuntu-22.04]
+    permissions:
+      id-token: write   # This is required for OIDC login (azure/login) to succeed
+      contents: read    # This is required for actions/checkout to succeed
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
+    - name: Azure Login
+      uses: azure/login@v2
+      if: github.event_name == 'push' && github.repository == 'microsoft/playwright'
+      with:
+        client-id: ${{ secrets.AZURE_FLAKINESS_DASHBOARD_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_FLAKINESS_DASHBOARD_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_FLAKINESS_DASHBOARD_SUBSCRIPTION_ID }}
     - uses: actions/setup-node@v4
       with:
         node-version: 18
