--- a/.github/workflows/publish_release_driver.yml
+++ b/.github/workflows/publish_release_driver.yml
@@ -12,8 +12,18 @@ jobs:
     name: "publish playwright driver to CDN"
     runs-on: ubuntu-20.04
     if: github.repository == 'microsoft/playwright'
+    permissions:
+      id-token: write  # This is required for OIDC login (azure/login) to succeed
+      contents: read   # This is required for actions/checkout to succeed
+    environment: allow-publish-driver-to-cdn # This is required for OIDC login (azure/login)
     steps:
     - uses: actions/checkout@v4
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_PW_CDN_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_PW_CDN_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_PW_CDN_SUBSCRIPTION_ID }}
     - uses: actions/setup-node@v4
       with:
         node-version: 18
@@ -25,5 +35,3 @@ jobs:
     - run: utils/build/upload-playwright-driver.sh
       env:
         AZ_UPLOAD_FOLDER: driver
-        AZ_ACCOUNT_KEY: ${{ secrets.AZ_ACCOUNT_KEY }}
-        AZ_ACCOUNT_NAME: ${{ secrets.AZ_ACCOUNT_NAME }}
